[gd_scene load_steps=9 format=3 uid="uid://bnx7dlia8vaph"]

[ext_resource type="Theme" uid="uid://dnfite8qns327" path="res://assets/Work_theme.tres" id="1_ljr25"]
[ext_resource type="Script" path="res://src/Main_Screen.gd" id="2_2cndg"]
[ext_resource type="Texture2D" uid="uid://bgh1wcubseapk" path="res://assets/the-owl-house-03.jpg" id="2_iuvri"]
[ext_resource type="PackedScene" uid="uid://cykgmfsn1whj8" path="res://src/V2_Block_Template.tscn" id="4_s1j66"]
[ext_resource type="Script" path="res://src/DropToActiveUnit.gd" id="5_4trxd"]
[ext_resource type="Script" path="res://src/ImportTextPopup.gd" id="6_4hosw"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_t1cmv"]
bg_color = Color(0.235294, 0.6, 0.6, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lcmgr"]
bg_color = Color(0.113725, 0.113725, 0.113725, 0.713726)

[node name="MainWindow" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_ljr25")
script = ExtResource("2_2cndg")
add_popup_child_to = "PopupContainer/PopUpParent"
metadata/_edit_vertical_guides_ = [1280.0, 980.0]
metadata/_edit_horizontal_guides_ = [22.0, 137.0]

[node name="BackgroundImage" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_iuvri")
expand_mode = 3

[node name="MarginContainer" type="MarginContainer" parent="BackgroundImage"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="HSplitContainer" type="HSplitContainer" parent="BackgroundImage/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 40
split_offset = 220
dragger_visibility = 1

[node name="TimersBackground" type="ColorRect" parent="BackgroundImage/MarginContainer/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3
color = Color(1, 0.627451, 1, 0.392157)

[node name="PresetsBackground" type="ColorRect" parent="BackgroundImage/MarginContainer/HSplitContainer/TimersBackground"]
layout_mode = 2
offset_right = 815.0
offset_bottom = 670.0
size_flags_vertical = 3
color = Color(1, 1, 0.219608, 0.545098)

[node name="VSplitContainer" type="VSplitContainer" parent="BackgroundImage/MarginContainer/HSplitContainer/TimersBackground/PresetsBackground"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
theme_override_constants/separation = 50
split_offset = 100
dragger_visibility = 1

[node name="TopButtons" type="HBoxContainer" parent="BackgroundImage/MarginContainer/HSplitContainer/TimersBackground/PresetsBackground/VSplitContainer"]
layout_mode = 2
theme_override_constants/separation = 50
alignment = 1

[node name="CreateNewTimer" type="Button" parent="BackgroundImage/MarginContainer/HSplitContainer/TimersBackground/PresetsBackground/VSplitContainer/TopButtons"]
layout_mode = 2
size_flags_horizontal = 3
text = "Create New Preset"

[node name="Button" type="Button" parent="BackgroundImage/MarginContainer/HSplitContainer/TimersBackground/PresetsBackground/VSplitContainer/TopButtons"]
layout_mode = 2
size_flags_horizontal = 3
text = "Import Presets"

[node name="PresetsScrollContainer" type="ScrollContainer" parent="BackgroundImage/MarginContainer/HSplitContainer/TimersBackground/PresetsBackground/VSplitContainer"]
custom_minimum_size = Vector2(0, 202)
layout_mode = 2
size_flags_vertical = 3
vertical_scroll_mode = 2

[node name="GridContainer" type="GridContainer" parent="BackgroundImage/MarginContainer/HSplitContainer/TimersBackground/PresetsBackground/VSplitContainer/PresetsScrollContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
theme_override_constants/h_separation = 200
theme_override_constants/v_separation = 50
columns = 2

[node name="V2BlockTemplate2" parent="BackgroundImage/MarginContainer/HSplitContainer/TimersBackground/PresetsBackground/VSplitContainer/PresetsScrollContainer/GridContainer" instance=ExtResource("4_s1j66")]
layout_mode = 2
task_name = "W5"
minutes_duration = 5

[node name="V2BlockTemplate" parent="BackgroundImage/MarginContainer/HSplitContainer/TimersBackground/PresetsBackground/VSplitContainer/PresetsScrollContainer/GridContainer" instance=ExtResource("4_s1j66")]
layout_mode = 2
task_name = "Short Break"
minutes_duration = 5

[node name="V2BlockTemplate3" parent="BackgroundImage/MarginContainer/HSplitContainer/TimersBackground/PresetsBackground/VSplitContainer/PresetsScrollContainer/GridContainer" instance=ExtResource("4_s1j66")]
layout_mode = 2
task_name = "W10"
minutes_duration = 10

[node name="V2BlockTemplate4" parent="BackgroundImage/MarginContainer/HSplitContainer/TimersBackground/PresetsBackground/VSplitContainer/PresetsScrollContainer/GridContainer" instance=ExtResource("4_s1j66")]
layout_mode = 2
task_name = "Long Break"
minutes_duration = 15

[node name="V2BlockTemplate5" parent="BackgroundImage/MarginContainer/HSplitContainer/TimersBackground/PresetsBackground/VSplitContainer/PresetsScrollContainer/GridContainer" instance=ExtResource("4_s1j66")]
layout_mode = 2
task_name = "W15"
minutes_duration = 15

[node name="TaskBoard" type="ColorRect" parent="BackgroundImage/MarginContainer/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3
color = Color(0.215686, 0.407843, 0.756863, 1)

[node name="VSplitContainer" type="VSplitContainer" parent="BackgroundImage/MarginContainer/HSplitContainer/TaskBoard"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 25
split_offset = -210
dragger_visibility = 1

[node name="StartSchedule" type="Button" parent="BackgroundImage/MarginContainer/HSplitContainer/TaskBoard/VSplitContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_t1cmv")
theme_override_styles/disabled = SubResource("StyleBoxFlat_lcmgr")
text = "Start Schedule"

[node name="VBoxContainer" type="VBoxContainer" parent="BackgroundImage/MarginContainer/HSplitContainer/TaskBoard/VSplitContainer/StartSchedule"]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 2
theme_override_constants/separation = 0

[node name="ResetButton" type="Button" parent="BackgroundImage/MarginContainer/HSplitContainer/TaskBoard/VSplitContainer/StartSchedule/VBoxContainer"]
layout_mode = 2
text = "  Restart"

[node name="PausePlayButton" type="Button" parent="BackgroundImage/MarginContainer/HSplitContainer/TaskBoard/VSplitContainer/StartSchedule/VBoxContainer"]
layout_mode = 2
text = "Pause"

[node name="Button2" type="Button" parent="BackgroundImage/MarginContainer/HSplitContainer/TaskBoard/VSplitContainer/StartSchedule/VBoxContainer"]
layout_mode = 2
text = "Loop"

[node name="Control" type="Control" parent="BackgroundImage/MarginContainer/HSplitContainer/TaskBoard/VSplitContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ScheduleVBox" type="VBoxContainer" parent="BackgroundImage/MarginContainer/HSplitContainer/TaskBoard/VSplitContainer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="Container2" type="Container" parent="BackgroundImage/MarginContainer/HSplitContainer/TaskBoard/VSplitContainer/Control"]
modulate = Color(0, 0, 1, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -26.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
script = ExtResource("5_4trxd")
is_active_unit_child = false

[node name="FileDialog" type="FileDialog" parent="."]
title = "Open a File"
size = Vector2i(450, 162)
ok_button_text = "Open"
file_mode = 0
root_subfolder = "res://Timer Presets/"

[node name="Popup" type="Popup" parent="."]
size = Vector2i(200, 400)
script = ExtResource("6_4hosw")

[node name="VSplitContainer" type="VSplitContainer" parent="Popup"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
split_offset = 20
dragger_visibility = 1

[node name="Label" type="Label" parent="Popup/VSplitContainer"]
layout_mode = 2
text = "Import CSV Presets"
horizontal_alignment = 1

[node name="TextEdit" type="TextEdit" parent="Popup/VSplitContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
size_flags_vertical = 3
placeholder_text = "enter csv "

[node name="CheckButton" type="CheckButton" parent="."]
layout_mode = 0
offset_right = 32.0
offset_bottom = 16.0
text = "Dv mde"

[connection signal="pressed" from="BackgroundImage/MarginContainer/HSplitContainer/TimersBackground/PresetsBackground/VSplitContainer/TopButtons/CreateNewTimer" to="." method="_on_button_pressed"]
[connection signal="pressed" from="BackgroundImage/MarginContainer/HSplitContainer/TaskBoard/VSplitContainer/StartSchedule" to="." method="_on_start_schedule_pressed"]
[connection signal="pressed" from="BackgroundImage/MarginContainer/HSplitContainer/TaskBoard/VSplitContainer/StartSchedule/VBoxContainer/ResetButton" to="." method="_on_cancel_pressed"]
[connection signal="pressed" from="CheckButton" to="." method="_on_check_button_pressed"]
